tags suggestions and marginnotes

--- a/manuscript/bib.bib
+++ b/manuscript/bib.bib
@@ -1,3 +1,19 @@
+@article{gerds2024predicting,
+  title={Predicting the risks of kidney failure and death in adults with moderate to severe chronic kidney disease},
+  author={Gerds, Thomas Alexander and Ravani, Pietro},
+  journal={British Medical Journal},
+  volume={385},
+  year={2024},
+  publisher={British Medical Journal Publishing Group}
+}
+@article{liu2024predicting,
+  title={Predicting the risks of kidney failure and death in adults with moderate to severe chronic kidney disease: multinational, longitudinal, population based, cohort study},
+  author={Liu, Ping and Sawhney, Simon and Heide-J{\o}rgensen, Uffe and Quinn, Robert Ross and Jensen, Simon Kok and Mclean, Andrew and Christiansen, Christian Fynbo and Gerds, Thomas Alexander and Ravani, Pietro},
+  journal={British Medical Journal},
+  volume={385},
+  year={2024},
+  publisher={British Medical Journal Publishing Group}
+}
 @article{hampel1974influence,
   title={The influence curve and its role in robust estimation},
   author={Hampel, Frank R},
